fixed line alignment in mobile, added class identifier, moved style info to CSS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -188,4 +188,12 @@ tr:hover td{
       display: flex;
       flex-direction: column-reverse;
     }
-  }
+
+    .about-info {
+        margin-top: 10px;
+    }
+
+    p.home-info {
+        margin-top: 0px;
+    }
+}
